<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HillelApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_food_hours">FoodHoursActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_religious_communities_toast">ReligiousCommunitiesToastActivity</string>
    <string name="title_activity_israel_toast">IsraelToastActivity</string>
    <string name="title_activity_social_justice_toast">SocialJusticeToastActivity</string>
    <string name="title_activity_education_toast">EducationToastActivity</string>
    <string name="title_activity_jewish_culture_toast">JewishCultureToastActivity</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_organization">OrganizationActivity</string>
    <string name="title_activity_israel_info">IsraelInfoActivity</string>
    <string name="title_activity_jewish_culture_info">JewishCultureInfoActivity</string>
    <string name="title_activity_education_info">EducationInfoActivity</string>
    <string name="title_activity_religious_communities_info">ReligiousCommunitiesInfoActivity</string>
    <string name="title_activity_social_justice_info">SocialJusticeInfoActivity</string>
    <string name="jewish_learning_title">THE JEWISH LEARNING INITIATIVE ON CAMPUS</string>
    <string name="jewish_learning_body">JLIC was created as a resource for Jewish education through a fulfilling partnership between Hillel and the Orthodox Union.</string>
    <string name="jewish_learning_contact">Rabbi Jonathan Shulman - jshulman@phillyhillel.org</string>
    <string name="sunday_title">SUNDAY NIGHT LEARNING</string>
    <string name="sunday_body">Sunday Night Learning is a weekly event in which students learn Jewish texts in pairs</string>
    <string name="sunday_contact">Shira Redlich - shiraredlich@gmail.com</string>
    <string name="story_title">JEWISH SHORT STORY CLUB</string>
    <string name="story_body">The Jewish short story club meets once a month to discuss selected short stories by Jewish authors or pertaining to Jewish themes.</string>
    <string name="story_contact">Ruben Waldman—waldmanr@seas.upenn.edu</string>
    <string name="hashtag_title">#PENNHILLEL</string>
    <string name="hashtag_body">#PennHillel is Hillel’s weekly publication comprised of contributions from members of the Hillel community.</string>
    <string name="hashtag_contact">Raymond Habbaz- rhabbaz@sas.upenn.edu and Shlomit Heering- shh447@gmail.com</string>
    <string name="hebrew_project_title">THE PENN HEBREW PROJECT</string>
    <string name="hebrew_project_body">Penn Hebrew Project is a weekly, peer-to-peer Hebrew tutoring program.</string>
    <string name="hebrew_project_contact">Ben Bolnick—bkbolnic@sas.upenn.edu</string>
    <string name="one_oh_one_title">JUDAISM 101</string>
    <string name="one_oh_one_body">This six-week mini-series offers a foundation of Judaism, bringing participants to engage thoughtfully and deeply with the essential Jewish ideas.</string>
    <string name="one_oh_one_contact">Shoshana Akabas— shoshanaakabas@gmail.com</string>
    <string name="hec_title">HOLOCAUST EDUCATION COMMITTEE</string>
    <string name="hec_body">HEC focuses on educating about the tragedy of the Holocaust in an effort to stifle future hatred and intolerance.</string>
    <string name="hec_contact">Samantha Sharon - sharonsa@sas.upenn.edu and Avi Grunfeld - Grunavi@sas.upenn.edu</string>
    <string name="ocp_title">OCP CHESSED</string>
    <string name="ocp_body">OCP Chessed allows students to give of themselves to the Penn Jewish community &amp; the world at large by running various events to benefit local &amp; international charities.</string>
    <string name="ocp_contact">Rebecca Spirgel - rebecca.spirgel@gmail.com and Leora Apfelbaum - lja421@gmail.com</string>
    <string name="soup_title">SOUP KITCHEN</string>
    <string name="soup_body">Penn Hillel hosts a Sunday night soup kitchen where volunteers serve food to the community members in need.</string>
    <string name="soup_contact">Kenneth Ginsburg - kengi@sas.upenn.edu</string>
    <string name="atid_title">ATID: MENTORING FOR THE FUTURE</string>
    <string name="atid_body">Atid matches up Penn students with West Philadelphia high school students for 1-on-1 college access mentoring.</string>
    <string name="atid_contact">Shayna Golkow - shaynago@sas.upenn.edu and Elana Stern - selana@sas.upenn.edu</string>
    <string name="jpeg_title">JEWISH PENN ENVIRONMENTAL GROUP</string>
    <string name="jpeg_body">JPEG focuses on raising awareness of environmental issues, encouraging sustaibale practices on campus and helping students realize the connection between environmental issues and Judaism.</string>
    <string name="jpeg_contact">Ariana Schanzer - arianaschanzer@gmail.com</string>
    <string name="sunshine_title">PROJECT SUNSHINE</string>
    <string name="sunshine_body">Students work under the supervision of Project Sunshine to visit patients at the Children\'s Hospital of Philadelphia.</string>
    <string name="sunshine_contact">Suzy Landon - slandon@sas.upenn.edu</string>
    <string name="orthodox_title">ORTHODOX COMMUNITY AT PENN</string>
    <string name="orthodox_body">OCP offers a plethora of programs &amp; services for Orthodox Jewish students at Penn and at neighboring schools.</string>
    <string name="orthodox_contact">Etan Raskas - eraskas@gmail.com and Daniel Raiken - daniel.raikin@gmail.com</string>
    <string name="conservative_title">CONSERVATIVE JEWISH COMMUNITY</string>
    <string name="conservative_body">CJC offers Conservatice Shabbat &amp; holiday services as well as various social &amp; educational events for students across campus.</string>
    <string name="conservative_contact">Gregory Segal - grsegal@sas.upenn.edu and Elana Leib - leibel@sas.upenn.edu</string>
    <string name="reform_title">REFORM JEWISH COMMUNITY</string>
    <string name="reform_body">RJC hold musical, intimate services and holiday celebrations and fosters an environment that encourages learning and social justice, as well as the exploration of spirituality.</string>
    <string name="reform_contact">Rachel Eisenberg - erach@sas.upenn.edu and Jacob Ruden - jruden@sas.upenn.edu</string>
    <string name="shira_title">SHIRA CHADASHA</string>
    <string name="shira_body">Shira Chadasha strives to provide Penn\'s Jewish student body with spirited and inclusive prayer opportunities.</string>
    <string name="shira_contact">Tamar Friedman - tamarf@sas.upenn.edu and Daniel Blas - danielblas@gmail.com and Joe Step - joestep93@gmail.com</string>
    <string name="sephardic_title">SEPHARDIC YIDDEN QUAKERS</string>
    <string name="sephardic_body">SYQ is a group that embraces Sephardic Jews from all different backgrounds.</string>
    <string name="sephardic_contact">Raymond Habbaz - rhabbaz@sas.upenn.edu and Jack Gindi - jgindi@sas.upenn.edu</string>
    <string name="pipac_title">PIPAC</string>
    <string name="pipac_body">PIPAC is dedicated to supporting and strengthening the US-Israel alliance through involvement in the American political process.</string>
    <string name="pipac_contact">Josh Adler - pennisraelpac@gmail.com</string>
    <string name="jstreet_title">J-STREET</string>
    <string name="jstreet_body">J-Street is part of a national student movement that aims to change the conversation about Israel, occupation and the peace process on campuses in order to promote a two-state solution.</string>
    <string name="jstreet_contact">Jacob Ruden - jruden@sas.upenn.edu</string>
    <string name="icc_title">ISRAEL CULTURAL COMMITTEE</string>
    <string name="icc_body">ICC hosts many fun and exciting events exploring the cultural side of Israel, including engaging speakers, concerts, food outings, movie screenings and more!</string>
    <string name="icc_contact">Michale Goldberger - michaleg25@gmail.com</string>
    <string name="israelatpenn_title">ISRAEL@PENN</string>
    <string name="israelatpenn_body">Israel@Penn is a student-run Israel education group on Penn\'s campus.</string>
    <string name="israelatpenn_contact">Alexandra Guttman - guttmana@sas.upenn.edu and Daniela Jinich - danielajinich@gmail.com</string>
    <string name="tamid_title">TAMID</string>
    <string name="tamid_body">The TAMID Israel Investment Group connects Penn business-minded students with Israeli economic landscape through a student-led investment fund, consulting projects and the Fellowship Summer Internship Program.</string>
    <string name="tamid_contact">Dov Stern - dov.stern@tamidgroup.org</string>
    <string name="jbagel_title">J-BAGEL</string>
    <string name="jbagel_body">J-Bagel is a Philadelphia-wide student group dedicated to serving members of the LGBTQAI (Lesbian, Gay, Bisexual, Transexual/Transgender, Queer/Questioning, Ally, Intersex) community.</string>
    <string name="jbagel_contact">Ian Fiedler - fiedleri@sas.upenn.edu</string>
    <string name="shabbatones_title">PENN SHABBATONES</string>
    <string name="shabbatones_body">Penn\'s premier Jewish A Capella group.</string>
    <string name="shabbatones_contact">Adina Goldstein - goadina@sas.upenn.edu and Sarah Beckoff - sbeckoff@wharton.upenn.edu</string>
    <string name="transfers_title">PENN TRANSFERS</string>
    <string name="transfers_body">A community of Jewish students who transferred into Penn.</string>
    <string name="transfers_contact">Zach Dorsen - zdorsen@sas.upenn.edu</string>
    <string name="shabcom_title">SHABBAT COMMITTEE</string>
    <string name="shabcom_body">Shabbat Committee is dedicated to making the Shabbat experience at Penn Hillel as engaging and meaningful as possible.</string>
    <string name="shabcom_contact">Zachary Taub - ztaub@sas.upenn.edu</string>
    <string name="markcom_title">MARKETING COMMITTEE</string>
    <string name="markcom_body">Hillel\'s Marketing Committee works to advertise Penn Hillel events and opportunities to students.</string>
    <string name="markcom_contact">Alexandra Guttman - guttmana@sas.upenn.edu</string>
    <string name="zoremet_title">PENN ZOREMET</string>
    <string name="zoremet_body">PennZoremet is Penn\'s Jewish dance troupe.</string>
    <string name="zoremet_contact">Aviva Koloski - akoloski@sas.upenn.edu and Hannah Dardashti - dahannah@sas.upenn.edu</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="event_list_header">Upcoming Events</string>
    <string name="event_sign_up_btn">Sign Up!</string>

</resources>
