<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/redbluelights"
    tools:context=".EducationInfoActivity" >
    

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        
        <!-- Jewish Learning Initiative on Campus -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/jewish_learning_title" />
	    </TableRow>
		    
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/jewish_learning_body" />
	  	</TableRow>
		   
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/jewish_learning_contact" />
		</TableRow>  
		
        <!-- Sunday Night Learning -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/sunday_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/sunday_body" />
	    </TableRow>  
		
        <TableRow>
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/sunday_contact" />
	   	</TableRow>  
		
        <!-- Jewish Short Story Club -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/story_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/story_body" />
	    </TableRow>  
		
        <TableRow> 
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/story_contact" />
	    </TableRow>  
		
        <!-- #PENNHILLEL -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/hashtag_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/hashtag_body" />
	    </TableRow>  
		
        <TableRow> 
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/hashtag_contact" />
	    </TableRow>  
		
        <!-- The Penn Hebrew Project -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/hebrew_project_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/hebrew_project_body" />
	    </TableRow>  
		
        <TableRow>
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/hebrew_project_contact" />
	    </TableRow>  
		
        <!-- Judaism 101 -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/one_oh_one_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/one_oh_one_body" />
	   	</TableRow>  
		
        <TableRow> 
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:text="@string/one_oh_one_contact" />
	   
	   </TableRow>
	   
   </TableLayout>
    
    

</ScrollView>
