<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/redbluelights"
    tools:context=".IsraelInfoActivity" >
    

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        
        <!-- PIPAC -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/pipac_title" />
	    </TableRow>
		    
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/pipac_body" />
	  	</TableRow>
		   
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/pipac_contact" />
		</TableRow>  
		
        <!-- J-Street -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/jstreet_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/jstreet_body" />
	    </TableRow>  
		
        <TableRow>
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/jstreet_contact" />
	   	</TableRow>  
		
        <!-- Israel Cultural Committee -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/icc_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/icc_body" />
	    </TableRow>  
		
        <TableRow> 
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/icc_contact" />
	    </TableRow>  
		
        <!-- Israel @ Penn -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/israelatpenn_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/israelatpenn_body" />
	    </TableRow>  
		
        <TableRow> 
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/israelatpenn_contact" />
	    </TableRow>  
		
        <!-- Tamid -->
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="bold"
		        android:text="@string/tamid_title" />
	    </TableRow>  
		
        <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:text="@string/tamid_body" />
	    </TableRow>  
		
        <TableRow>
		   <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white" 
		        android:textStyle="italic"
		        android:layout_marginBottom="20px"
		        android:text="@string/tamid_contact" />
	    </TableRow>
	   
   </TableLayout>
    
    

</ScrollView>
